# OrgLens

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.backup.2026-04-15.md  README.md  config.aws.yaml  config.yaml  module_map.yaml  pyproject.toml
.github/: copilot-instructions.md
data/: README.md
infra/aws/: COST_GUARDRAILS.md  DEPLOYMENT_AWS.md  IMPLEMENTATION_PLAN.md  cost_guardrails.sh  deploy_ec2_stack.sh  docker-compose.minimal.proxy.yml  docker-compose.minimal.yml  p2_enable_alb_acm.sh  p2_prepare_ecs_fargate.sh  p2_provision_rds.sh  push_ssm_secrets.sh  setup_stack.sh  sync_ssm_secrets.sh
infra/aws/ecs/: taskdef-layer1.json  taskdef-layer2.json
infra/aws/grafana/dashboards/: orglens-3layer-overview.json
infra/aws/prometheus/: prometheus.minimal.yml
infra/local/: docker-compose.observability.yml
infra/local/prometheus/: prometheus.local.yml
orglens/: auto_cli.py  config.py  pipeline.py
orglens/layers/: __init__.py
orglens/layers/layer1/: __init__.py  agent.py
orglens/layers/layer1_cloud/: __init__.py  main.py
orglens/layers/layer2/: __init__.py  api.py  archive.py  main.py  models.py  processor.py  queue.py  settings.py  status.py  storage.py  worker.py
orglens/layers/layer2_core/: __init__.py  main.py
scripts/: aws_sso_refresh.sh  deploy_grafana_dashboard.sh  deploy_grafana_dashboard_ssm.sh  run_minimal_pipeline.sh
tests/: test_batch_buffer.py  test_config.py  test_normalizer.py  test_pipeline.py
tests/fixtures/: push_payload.json
tests/integration/: test_layer1_layer2_smoke.py
tests/layer2/: test_api.py  test_processor.py
(+32 files in other folders)
